<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.cs4520.assignment3.HomeFragment"
        android:label="@string/homeFragment"
        tools:layout="@layout/fragment_home"
        app:navGraph="@navigation/nav_graph"
        app:defaultNavHost="true"
        >
        <action
            android:id="@+id/action_homeFragment_to_mvpFragment"
            app:destination="@id/mvpFragment" />
        <action
            android:id="@+id/action_homeFragment_to_mvvmFragment"
            app:destination="@id/mvvmFragment" />
    </fragment>

    <fragment
        android:id="@+id/mvpFragment"
        android:name="com.cs4520.assignment3.MVPFragment"
        android:label="@string/mvp"
        tools:layout="@layout/fragment_mvp">
    </fragment>

    <fragment
        android:id="@+id/mvvmFragment"
        android:name="com.cs4520.assignment3.MVVMFragment"
        android:label="@string/mvvm"
        tools:layout="@layout/fragment_mvvm">
    </fragment>
</navigation>
